Fix for issue: Date widget hidden under dialog on edit of live form in dialog mode

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2603,6 +2603,12 @@ If the height and width are not specified the video takes the height of the post
   }
 }
 
+.app-date {
+  .uib-datepicker-popup.dropdown-menu {
+    z-index: 100000;
+  }
+}
+
 /*====================================================================================================================
   END - Widgets
 
